--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -183,20 +183,83 @@
 
 
     <ImageView
-        android:id="@+id/bunny"
+        android:id="@+id/bunny_white"
         android:layout_width="300px"
         android:layout_height="300px"
         android:src = "@drawable/bunny_transp"
         android:visibility = "invisible" />
 
     <ImageView
-        android:id="@+id/carrot"
+        android:id="@+id/bunny_brown"
+        android:layout_width="300px"
+        android:layout_height="300px"
+        android:visibility="invisible"
+        app:srcCompat="@drawable/bunny2" />
+
+    <ImageView
+        android:id="@+id/carrot_default"
         android:layout_width="300px"
         android:layout_height="300px"
         android:src = "@drawable/carrot_transp"
         android:visibility = "invisible"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <ImageView
+        android:id="@+id/path_1600_300"
+        android:layout_width="1920px"
+        android:layout_height="600px"
+        android:visibility="invisible"
+        app:srcCompat="@drawable/path_1600_300" />
+
+    <ImageView
+        android:id="@+id/curve_1600_300"
+        android:layout_width="1920px"
+        android:layout_height="600px"
+        android:visibility="invisible"
+        app:srcCompat="@drawable/curve_1600_300" />
+
+    <ImageView
+        android:id="@+id/bunnyCheerSingle"
+        android:layout_width="300px"
+        android:layout_height="300px"
+        android:src="@drawable/bunny_cheer" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/bunnyCheer1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:src="@drawable/bunny_cheer"/>
+        <ImageView
+            android:id="@+id/bunnyCheer2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:src="@drawable/bunny_cheer"/>
+        <ImageView
+            android:id="@+id/bunnyCheer3"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:src="@drawable/bunny_cheer"/>
+        <ImageView
+            android:id="@+id/bunnyCheer4"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:src="@drawable/bunny_cheer"/>
+        <ImageView
+            android:id="@+id/bunnyCheer5"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:src="@drawable/bunny_cheer"/>
+    </LinearLayout>
 
     <!-- DEBUG INTERFACE -->
     <TextView
@@ -255,9 +318,10 @@
 
     <lecho.lib.hellocharts.view.LineChartView
         android:id="@+id/AccelChart1"
-        android:layout_width = "match_parent"
-        android:layout_height = "200dp"
-        app:layout_constraintTop_toBottomOf="@id/TouchChart"
-        />
+        android:layout_width="match_parent"
+        android:layout_height="600px"
+        app:layout_constraintTop_toBottomOf="@id/TouchChart" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
