--- a/app/src/main/res/layout/activity_experiment.xml
+++ b/app/src/main/res/layout/activity_experiment.xml
@@ -74,13 +74,49 @@
 
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/guide_curve_toright"
         android:layout_width="1520px"
         android:layout_height="800px"
         app:srcCompat="@drawable/guide_curve_toright"
-        tools:layout_editor_absoluteX="200px"
-        tools:layout_editor_absoluteY="200px"
-        tools:ignore="MissingConstraints" />
+        android:layout_marginStart="200px"
+        android:layout_marginLeft="200px"
+        android:layout_marginTop="200px"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+         />
+    <ImageView
+        android:id="@+id/guide_curve_toleft"
+        android:layout_width="1520px"
+        android:layout_height="800px"
+        app:srcCompat="@drawable/guide_curve_toleft"
+        android:layout_marginStart="200px"
+        android:layout_marginLeft="200px"
+        android:layout_marginTop="200px"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+    <ImageView
+        android:id="@+id/guide_line_toright"
+        android:layout_width="1520px"
+        android:layout_height="800px"
+        app:srcCompat="@drawable/guide_line_toright"
+        android:layout_marginStart="200px"
+        android:layout_marginLeft="200px"
+        android:layout_marginTop="200px"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+    <ImageView
+        android:id="@+id/guide_line_toleft"
+        android:layout_width="1520px"
+        android:layout_height="800px"
+        app:srcCompat="@drawable/guide_line_toleft"
+        android:layout_marginStart="200px"
+        android:layout_marginLeft="200px"
+        android:layout_marginTop="200px"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <Button
         android:id="@+id/beginButton"
@@ -88,8 +124,65 @@
         android:layout_height="wrap_content"
         android:text="START"
         android:textSize="36dp"
-        tools:layout_editor_absoluteX="420dp"
-        tools:layout_editor_absoluteY="420dp"
+        android:layout_marginBottom="20px"
+        app:layout_constraintEnd_toEndOf="@+id/guide_curve_toright"
+        app:layout_constraintStart_toStartOf="@+id/guide_curve_toright"
+        app:layout_constraintBottom_toBottomOf="@+id/guide_curve_toright" />
+
+    <Button
+        android:id="@+id/nextBlockButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="NEXT"
+        android:textSize="36dp"
+        android:layout_marginBottom="100px"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+    <ImageView
+        android:id="@+id/bunnyCheerSingle"
+        android:layout_width="300px"
+        android:layout_height="300px"
+        android:src="@drawable/bunny_cheer"
+        android:visibility="invisible"
         tools:ignore="MissingConstraints" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/bunnyCheer1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:src="@drawable/bunny_cheer"/>
+        <ImageView
+            android:id="@+id/bunnyCheer2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:src="@drawable/bunny_cheer"/>
+        <ImageView
+            android:id="@+id/bunnyCheer3"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:src="@drawable/bunny_cheer"/>
+        <ImageView
+            android:id="@+id/bunnyCheer4"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:src="@drawable/bunny_cheer"/>
+        <ImageView
+            android:id="@+id/bunnyCheer5"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:src="@drawable/bunny_cheer"/>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
