--- a/app/src/main/res/layout/activity_experiment.xml
+++ b/app/src/main/res/layout/activity_experiment.xml
@@ -128,6 +128,16 @@
         app:layout_constraintEnd_toEndOf="@+id/guide_curve_toright"
         app:layout_constraintStart_toStartOf="@+id/guide_curve_toright"
         app:layout_constraintBottom_toBottomOf="@+id/guide_curve_toright" />
+    <Button
+        android:id="@+id/quitButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="END AND CLOSE"
+        android:textSize="36dp"
+        android:layout_marginBottom="20px"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
     <Button
         android:id="@+id/nextBlockButton"
@@ -148,10 +158,25 @@
         android:visibility="invisible"
         tools:ignore="MissingConstraints" />
 
+    <TextView
+        android:id="@+id/thankyoucheer"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:text="Thank you for feeding us!"
+        android:textSize="64dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop = "30px"
+        />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom = "100px"
         android:orientation="horizontal">
 
         <ImageView
@@ -159,7 +184,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@drawable/bunny_cheer"/>
+            android:src="@drawable/bunny_cheer" />
+
         <ImageView
             android:id="@+id/bunnyCheer2"
             android:layout_width="0dp"
@@ -184,5 +210,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:src="@drawable/bunny_cheer"/>
+
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
