--- a/app/src/main/res/layout/activity_practice.xml
+++ b/app/src/main/res/layout/activity_practice.xml
@@ -2,8 +2,144 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/practiceLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Practice">
+    <ImageView
+        android:id="@+id/bg_grass"
+        android:layout_width="1920px"
+        android:layout_height="1200px"
+        android:src="@drawable/bg_grass"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/finished_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="QUIT"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+    <Button
+        android:id="@+id/next_button"
+        android:layout_width="123dp"
+        android:layout_height="82dp"
+        android:text="Next"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+
+        />
+
+    <ImageView
+        android:id="@+id/target_circle"
+        android:layout_width="144dp"
+        android:layout_height="236dp"
+        app:srcCompat="@drawable/bunny"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="100dp"
+        android:layout_marginLeft="100dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="200dp"
+        />
+
+    <ImageView
+        android:id="@+id/carrot_default"
+        android:layout_width="249dp"
+        android:layout_height="119dp"
+        app:srcCompat="@drawable/carrot_transp"
+        app:layout_constraintStart_toEndOf="@id/target_circle"
+        android:layout_marginStart="50dp"
+        android:layout_marginLeft="50dp"
+        app:layout_constraintTop_toTopOf="@id/target_circle"
+        />
+
+    <ImageView
+        android:id="@+id/bunny_brown"
+        android:layout_width="213dp"
+        android:layout_height="214dp"
+        app:srcCompat="@drawable/bunny_brown"
+        app:layout_constraintStart_toEndOf="@id/carrot_default"
+        android:layout_marginStart="50dp"
+        android:layout_marginLeft="50dp"
+        app:layout_constraintTop_toTopOf="@id/target_circle"
+        />
+
+    <ImageView
+        android:id="@+id/path_diagonal_1600"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/path0_000"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="400dp" />
+
+
+
+
+    <ImageView
+        android:id="@+id/title_learn_which"
+        android:layout_width="212dp"
+        android:layout_height="108dp"
+        app:srcCompat="@drawable/dirt4"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp"
+        />
+    <ImageView
+        android:id="@+id/title_choose_which"
+        android:layout_width="212dp"
+        android:layout_height="108dp"
+        app:srcCompat="@drawable/dirt4"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp"
+        />
+    <TextView
+        android:id="@+id/which_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="which"
+        app:layout_constraintTop_toBottomOf="@id/title_choose_which"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp"
+        />
+    <ImageView
+        android:id="@+id/title_press_carrot"
+        android:layout_width="212dp"
+        android:layout_height="108dp"
+        app:srcCompat="@drawable/dirt4"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp"
+        />
+    <ImageView
+        android:id="@+id/title_drag_carrot_accuracy"
+        android:layout_width="212dp"
+        android:layout_height="108dp"
+        app:srcCompat="@drawable/dirt4"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp"
+        />
+    <ImageView
+        android:id="@+id/title_drag_carrot_speed"
+        android:layout_width="212dp"
+        android:layout_height="108dp"
+        app:srcCompat="@drawable/dirt4"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp"
+        />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
