--- a/app/src/main/res/layout/activity_practice.xml
+++ b/app/src/main/res/layout/activity_practice.xml
@@ -15,76 +15,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/finished_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="QUIT"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        />
-    <Button
-        android:id="@+id/next_button"
-        android:layout_width="123dp"
-        android:layout_height="82dp"
-        android:text="Next"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-
-        />
-
-    <ImageView
-        android:id="@+id/target_circle"
-        android:layout_width="144dp"
-        android:layout_height="236dp"
-        app:srcCompat="@drawable/bunny"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="100dp"
-        android:layout_marginLeft="100dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="200dp"
-        />
-
-    <ImageView
-        android:id="@+id/carrot_default"
-        android:layout_width="249dp"
-        android:layout_height="119dp"
-        app:srcCompat="@drawable/carrot_transp"
-        app:layout_constraintStart_toEndOf="@id/target_circle"
-        android:layout_marginStart="50dp"
-        android:layout_marginLeft="50dp"
-        app:layout_constraintTop_toTopOf="@id/target_circle"
-        />
-
-    <ImageView
-        android:id="@+id/bunny_brown"
-        android:layout_width="213dp"
-        android:layout_height="214dp"
-        app:srcCompat="@drawable/bunny_brown"
-        app:layout_constraintStart_toEndOf="@id/carrot_default"
-        android:layout_marginStart="50dp"
-        android:layout_marginLeft="50dp"
-        app:layout_constraintTop_toTopOf="@id/target_circle"
-        />
-
-    <ImageView
-        android:id="@+id/path_diagonal_1600"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/path0_000"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="400dp" />
-
-
-
 
     <ImageView
         android:id="@+id/title_learn_which"
-        android:layout_width="212dp"
-        android:layout_height="108dp"
-        app:srcCompat="@drawable/dirt4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/title_learn_which"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -92,9 +28,9 @@
         />
     <ImageView
         android:id="@+id/title_choose_which"
-        android:layout_width="212dp"
-        android:layout_height="108dp"
-        app:srcCompat="@drawable/dirt4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/title_choose_which"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -102,9 +38,11 @@
         />
     <TextView
         android:id="@+id/which_text"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:text="which"
+        android:textSize="40dp"
+        android:gravity="center"
         app:layout_constraintTop_toBottomOf="@id/title_choose_which"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -112,9 +50,9 @@
         />
     <ImageView
         android:id="@+id/title_press_carrot"
-        android:layout_width="212dp"
-        android:layout_height="108dp"
-        app:srcCompat="@drawable/dirt4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/title_press_carrot"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -122,9 +60,9 @@
         />
     <ImageView
         android:id="@+id/title_drag_carrot_accuracy"
-        android:layout_width="212dp"
-        android:layout_height="108dp"
-        app:srcCompat="@drawable/dirt4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/title_carrot_accuracy"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -132,14 +70,161 @@
         />
     <ImageView
         android:id="@+id/title_drag_carrot_speed"
-        android:layout_width="212dp"
-        android:layout_height="108dp"
-        app:srcCompat="@drawable/dirt4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/title_carrot_speed"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="20dp"
         />
 
+
+    <Button
+        android:id="@+id/finished_button"
+        android:layout_width="120dp"
+        android:layout_height="60dp"
+        android:text="QUIT"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+    <Button
+        android:id="@+id/next_button"
+        android:layout_width="120dp"
+        android:layout_height="60dp"
+        android:text="Next"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+
+        />
+    <Button
+        android:id="@+id/reset_button"
+        android:layout_width="120dp"
+        android:layout_height="60dp"
+        android:text="RESET"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
+    <Button
+        android:id="@+id/start_button"
+        android:layout_width="120dp"
+        android:layout_height="60dp"
+        android:text="BEGIN"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="200dp"
+        />
+
+
+
+    <ImageView
+        android:id="@+id/carrot_default"
+        android:layout_width="300px"
+        android:layout_height="300px"
+        app:srcCompat="@drawable/carrot_transp"
+        app:layout_constraintStart_toStartOf="@id/path_diagonal_1600"
+        app:layout_constraintBottom_toBottomOf="@id/path_diagonal_1600"
+        />
+
+    <ImageView
+        android:id="@+id/carrot_default1"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        app:srcCompat="@drawable/carrot_transp_300sq"
+        app:layout_constraintStart_toStartOf="@id/target_circle1"
+        app:layout_constraintTop_toTopOf="@id/target_circle1"
+        />
+
+    <ImageView
+        android:id="@+id/carrot_default2"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        app:srcCompat="@drawable/carrot_transp"
+        app:layout_constraintStart_toStartOf="@id/target_circle2"
+        app:layout_constraintTop_toTopOf="@id/carrot_default1"
+        />
+    <ImageView
+        android:id="@+id/carrot_default3"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        app:srcCompat="@drawable/carrot_transp"
+        app:layout_constraintStart_toStartOf="@id/target_circle3"
+        app:layout_constraintTop_toTopOf="@id/carrot_default1"
+        />
+
+    <ImageView
+        android:id="@+id/target_circle1"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        app:srcCompat="@drawable/touch_circle_300sq"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="100dp"
+        android:layout_marginLeft="100dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="200dp"
+        />
+    <ImageView
+        android:id="@+id/target_circle2"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        app:srcCompat="@drawable/touch_circle_300sq"
+        app:layout_constraintStart_toStartOf="@id/target_circle1"
+        android:layout_marginStart="300dp"
+        android:layout_marginLeft="300dp"
+        app:layout_constraintTop_toTopOf="@id/target_circle1"
+        />
+    <ImageView
+        android:id="@+id/target_circle3"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        app:srcCompat="@drawable/touch_circle_300sq"
+        app:layout_constraintStart_toStartOf="@id/target_circle2"
+        android:layout_marginStart="300dp"
+        android:layout_marginLeft="300dp"
+        app:layout_constraintTop_toTopOf="@id/target_circle1"
+        />
+
+    <ImageView
+        android:id="@+id/bunny_brown"
+        android:layout_width="300px"
+        android:layout_height="300px"
+        app:srcCompat="@drawable/bunny_brown"
+        app:layout_constraintEnd_toEndOf="@id/path_diagonal_1600"
+        app:layout_constraintTop_toTopOf="@id/path_diagonal_1600"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="10dp"
+        />
+
+    <ImageView
+        android:id="@+id/bunny_brown3"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        app:srcCompat="@drawable/bunny_brown_300sq"
+        app:layout_constraintStart_toStartOf="@id/target_circle3"
+        app:layout_constraintTop_toTopOf="@id/target_circle1"
+        />
+
+    <ImageView
+        android:id="@+id/path_diagonal_1600"
+        android:layout_width="1920px"
+        android:layout_height="600px"
+        app:srcCompat="@drawable/path_1600_diagonal"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="250px" />
+
+
+
+    <ImageView
+        android:id="@+id/blank_object"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:srcCompat="@drawable/dirt4"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
